--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "jquery": "^3.4.1",
-    "jsdom": "^15.1.1",
+    "jsdom": "^15.2.1",
     "moment": "^2.24.0",
-    "mysql": "^2.17.1",
-    "nightmare": "^3.0.2"
+    "mysql": "^2.18.1",
+    "nightmare": "^3.0.2",
+    "selenium-webdriver": "^4.0.0-alpha.5",
+    "xlsx": "^0.15.5"
   }
 }
